--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@ body{
     min-width: 100vh;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-image: url('./img/endless-constellation.svg');
+    color: #515151;
 }
 
-.logo{max-width: 20vh;}
+.logo{max-width: 15vh;}
 
 button{
     border-radius: 7px;
