--- a/style.css
+++ b/style.css
@@ -97,21 +97,24 @@ padding: 0;}
     color: #EAEAEA;
     background-color: #515151;
     border-radius: 0.7em;
-    margin: 4em auto;
+    margin: 4em;
     display: inline-block;
-    width: 35vw;
+    width: 30vw;
     height: 30vw;
 }
 
 .negras img{
     display: inline-block;
-    padding: 2em;
+    margin: 2em;
     width: 5vw;
     height: 5vw;
 }
 
+
+
 footer{
     margin-bottom: 0vw;
+    font-size: 1.5vw;
 }
 
 
@@ -120,7 +123,7 @@ footer{
     margin: 0 auto;
     text-align: center;
 }
-div{ background-color: #777;}
+/* div{ background-color: #777;} */
 
 .izquierda{float: left;}
 .derecha{float: right;}
