--- a/style.css
+++ b/style.css
@@ -7,18 +7,31 @@ Colores ->
     margin: top right bottom left
 */
 
+:root{
+    --blanco: #EAEAEA;
+    --azul: #87B0FC;
+    --negro: #515151;
+    --amarillo: #E8D44D;
+}
 
 body{
     min-width: 100vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-image: url('./img/endless-constellation.svg');
-    color: #515151;
+    color: var(--negro);
     margin: 0 auto;
 }
 
-.logo{max-width: 10vw;}
+.logo{transition: all 0.2s ease;
+    width: 10vw;}
+.logo:hover{
+    transition: all 0.2s ease;
+    width: 10.3vw;}
+
+a{text-decoration: none;}
 
 button{
+    transition: all 0.2s ease;
     border-radius: 0.7rem;
     font-size: 3vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -43,42 +56,97 @@ button:hover{
     text-align: center;
 }
 
+.contacto{
+    border-radius: 0.7vw;
+    position: absolute;
+    margin-left: 85vw;
+    background-color: var(--amarillo);
+    width: 10vw;
+    display: grid;
+    grid-template-rows: 5vh 5vh 5vh 5vh ;
+    justify-content: center;
+    gap: 3em;
+    padding: 1em;
+    box-shadow: 0.1em 0.1em 0.1em #555;
+}
+
+.volver{
+    transition: all 0.2s ease;
+    background-color: var(--azul);
+    color: var(--blanco);
+    border-radius: 0.7rem;
+    border: none;
+    padding: 0;
+    margin: 0 auto;
+    box-shadow: 0.05em 0.05em 0.05em #555;
+    width: 5vw;
+    font-size: 1em;
+}
+
+.volver:hover{
+    cursor: pointer;
+    transition: all 0.2s ease;
+    margin-top: 0;
+    box-shadow: 0.1em 0.1em 0.1em #555;
+    text-shadow: none;
+}
+
+.contacto img{
+    transition: all 0.2s ease;
+    width: 4vw;
+    margin: 0 auto;
+}
+
+.contacto img:hover{
+    transition: all 0.2s ease;
+    width: 5vw;
+}
+
+
 h1{
     font-size: 3vw;
 }
 
 h2{ font-size: 2vw;}
 
+.tarjetas{
+    width: 64vw;
+    display: grid;
+    grid-template-columns: 27vw 27vw;
+    margin: 0 auto;
+    justify-content: center;
+    gap: 10vh;
+}
+
 .tarjeta{
-    display: inline-block;
-    max-width: 35vw;
-    min-width: 25vw;
-    margin: 1em;
+    transition: all 0.2s ease;
+    margin: 0 auto;
+    padding: 0 auto;
     border-radius: 0.7rem;
     text-shadow: 0.05em 0.05em 0.05em #555;
 }
 
-.tarjeta img{
+.tarjeta>img{
     margin: 0 auto;
     margin-top: 1em;
     text-align: center;
-    max-width: 20vw;
+    max-width: 25vw;
     border-radius: 0.7vw;
     border: none;
     box-shadow: 0.1em 0.1em 0.1em #555;
 }
 
-.tarjeta h2{
+.tarjeta>h2{
     margin: 0 auto;
     margin-left: 1em;
     text-align: left;
+    text-shadow: none;
 }
 
-.tarjeta p{
-    font-size: 1vw;
+.tarjeta>p{
+    font-size: 1.3vw;
     margin: 0 auto;
-    margin-bottom: 1em;
-    margin-left: 2em;
+    margin-left:1.7em;
     text-align: left;
     max-width: 20em;
     text-shadow: none;
@@ -90,29 +158,48 @@ h2{ font-size: 2vw;}
     box-shadow: 0.1em 0.1em 0.1em #555;
 }
 
-.tarjetas{margin: 0 auto;
-padding: 0;}
+.tarjetasNegras{
 
-.negras{
-    color: #EAEAEA;
-    background-color: #515151;
-    border-radius: 0.7em;
-    margin: 4em;
-    display: inline-block;
-    width: 30vw;
-    height: 30vw;
+    width: 70vw;
+    display: grid;
+    grid-template-columns: 30vw 30vw;
+    gap: 5vw;
+    justify-content: center;
 }
 
-.negras img{
-    display: inline-block;
-    margin: 2em;
+.negras>h2{
+    grid-column:  1/ span 3;
+}
+.negras{
+    display: grid;
+    grid-template-columns: 10vw 10vw 10vw;
+    grid-template-rows: 10vh 10vh 10vh;
+    justify-content: center;
+    color: var(--blanco);
+    background-color: var(--negro);
+    border-radius: 0.7em;
+    margin: 4em;
+    width: 30vw;
+    height: 30vw;
+    margin: 0 auto;
+}
+
+.negras>img{
+    transition: all 0.2s ease;
+    padding: 1em;
     width: 5vw;
-    height: 5vw;
+    height: 15vh;
+}
+
+.negras>img:hover{
+    transition: all 0.2s ease;
+    height: 16vh;
 }
 
 
 
 footer{
+    margin-top: 10vh;
     margin-bottom: 0vw;
     font-size: 1.5vw;
 }
@@ -129,18 +216,18 @@ footer{
 .derecha{float: right;}
 
 .amarillos{
-    background-color: #E8D44D;
-    color: #515151;
+    background-color: var(--amarillo);
+    color: var(--negro);
     font-weight: bold;
 }
 
 .blanco{
-    color: #EAEAEA;
+    color: var(--blanco);
 }
 
 
 .azules{
-    background-color: #87B0FC;
-    color: #EAEAEA;
+    background-color: var(--azul);
+    color: var(--blanco);
     font-weight: bold;
 }
