--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ button{
     transition: all 0.2s ease;
     border-radius: 0.7rem;
     font-size: 3vw;
+    width: 18vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
     border: none;
@@ -59,15 +60,13 @@ button:hover{
 .contacto{
     border-radius: 0.7vw;
     position: absolute;
-    margin-left: 85vw;
-    background-color: var(--amarillo);
+    margin-left: 81.5vw;
     width: 10vw;
     display: grid;
     grid-template-rows: 5vh 5vh 5vh 5vh ;
     justify-content: center;
-    gap: 3em;
+    gap: 10vh;
     padding: 1em;
-    box-shadow: 0.1em 0.1em 0.1em #555;
 }
 
 .volver{
@@ -79,7 +78,7 @@ button:hover{
     padding: 0;
     margin: 0 auto;
     box-shadow: 0.05em 0.05em 0.05em #555;
-    width: 5vw;
+    width: 10vh;
     font-size: 1em;
 }
 
@@ -89,17 +88,18 @@ button:hover{
     margin-top: 0;
     box-shadow: 0.1em 0.1em 0.1em #555;
     text-shadow: none;
+    width: 10.5vh;
 }
 
 .contacto img{
     transition: all 0.2s ease;
-    width: 4vw;
+    height: 10vh;
     margin: 0 auto;
 }
 
 .contacto img:hover{
     transition: all 0.2s ease;
-    width: 5vw;
+    height: 11vh;
 }
 
 
