--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ button:hover{
 .contacto img:hover{
     transition: all 0.2s ease;
     height: 11vh;
+    filter: drop-shadow(1px 1px 3px gray);
 }
 
 
@@ -193,7 +194,7 @@ h2{ font-size: 2vw;}
 
 .negras>img:hover{
     transition: all 0.2s ease;
-    height: 16vh;
+    filter: drop-shadow(1px 1px 3px gray);
 }
 
 
