--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
     width: 10vw;}
 .logo:hover{
     transition: all 0.2s ease;
-    width: 10.3vw;}
+    filter: drop-shadow(1px 1px 3px gray);}
 
 a{text-decoration: none;}
 
@@ -100,7 +100,7 @@ button:hover{
 .contacto img:hover{
     transition: all 0.2s ease;
     height: 11vh;
-    filter: drop-shadow(1px 1px 3px gray);
+    filter: drop-shadow(2px 3px 3px gray);
 }
 
 
